<resources>
    <string name="app_name">GCT Companion</string>
    <string name="logo">GCT Companion</string>

    <!-- Vista Principal -->
    <string name="PrincipalTexto1">Detalle de Casos</string>
    <string name="PrincipalTexto2">Crear Caso</string>
    <string name="PrincipalTexto3">Crear Cliente</string>
    <string name="PrincipalTexto4">Crear Vendedor</string>
    <string name="PrincipalTexto5">Crear Representate</string>
    <string name="PrincipalTexto6">Nueva Baja</string>



    <string name="clienteTexto3">Correo Electronico</string>
    <string name="clienteTexto4">Estatus</string>
    <string name="clienteTexto5">Direccion</string>
    <string name="clienteTexto6">Estado Civil</string>
    <string name="clienteTexto7">Estado Migratorio</string>
    <string name="clienteTexto8">Profesion</string>
    <string name="clienteTexto9">Estado de Residencia</string>
    <string name="clienteTexto10">DPI</string>
    <string name="clienteTexto11">NIT</string>
    <string name="clienteTexto12">USA</string>


    <!-- Vista Vendedor -->
    <string name="VendedorTexto1">Nombre</string>
    <string name="VendedorTexto2">Telefono</string>
    <string name="VendedorTexto3">Constructora</string>
    <string name="VendedorTexto4">Correo Electronico</string>


    <!-- Vista Representante -->
    <string name="RepresentanteTexto1">Nombre</string>
    <string name="RepresentanteTexto2">Parentesco</string>
    <string name="RepresentanteTexto3">Dirreccion</string>
    <string name="RepresentanteTexto4">Telefono</string>
    <string name="RepresentanteTexto5">Banco</string>


    <!-- Vista Baja -->
    <string name="BajaTexto1">Nombre</string>
    <string name="BajaTexto2">Telefono</string>
    <string name="BajaTexto3">Dirreccion</string>
    <string name="BajaTexto4">Correo Electronico</string>


</resources>