<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrearBajaActivity">


    <LinearLayout
        android:layout_marginHorizontal="20sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Crear Baja"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageViewSeparator"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginVertical="5dp"
            android:src="@android:drawable/divider_horizontal_bright"
            android:scaleType="fitXY"/>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BajaTexto1"
                    style="@style/TextViewTittle"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputCrearCaso"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BajaTexto2"
                    style="@style/TextViewTittle"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputCrearCaso"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BajaTexto3"
                    style="@style/TextViewTittle"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputCrearCaso"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BajaTexto4"
                    style="@style/TextViewTittle"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputCrearCaso"/>


                <Button
                    android:id="@+id/buttonEditar"
                    android:layout_gravity="center"
                    android:text="Guardar"
                    android:layout_marginTop="25sp"
                    android:onClick="onClick"
                    style="@style/btnMain" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>